# Lumina

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  SIMS_SPEC.md  build.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  simulation_request.md
docs/: packaging.md
lumina/: __init__.py  __main__.py
lumina/core/: __init__.py  config.py  engine.py  help_dialog.py  plot.py  utils.py
lumina/launcher/: __init__.py  main.py  mainwindow.py  module_loader.py  theme.py
lumina/modules/applied_maths/: __init__.py
lumina/modules/applied_maths/ap01_phase_portrait/: __init__.py  physics.py  sim.py  test_ap01_phase_portrait.py  ui.py
lumina/modules/applied_maths/ap02_bifurcation/: __init__.py  physics.py  sim.py  test_ap02_bifurcation.py  ui.py
lumina/modules/applied_maths/ap03_lorenz/: __init__.py  physics.py  sim.py  test_ap03_lorenz.py  ui.py
lumina/modules/applied_maths/ap04_fourier_series/: __init__.py  physics.py  sim.py  test_ap04_fourier_series.py  ui.py
lumina/modules/applied_maths/ap05_linear_algebra/: __init__.py  physics.py  sim.py  test_ap05_linear_algebra.py  ui.py
lumina/modules/astrophysics/: __init__.py
lumina/modules/astrophysics/a02_orbital_mechanics/: __init__.py  physics.py  sim.py  test_a02_orbital_mechanics.py  ui.py
lumina/modules/electromagnetism/: __init__.py
lumina/modules/electromagnetism/e01_electric_field/: __init__.py  physics.py  sim.py  test_e01_electric_field.py  ui.py
lumina/modules/electromagnetism/e03_rlc_circuits/: __init__.py  physics.py  sim.py  test_e03_rlc_circuits.py  ui.py
lumina/modules/mechanics/: __init__.py
lumina/modules/mechanics/m01_projectile/: __init__.py  physics.py  sim.py  test_m01_projectile.py  ui.py
lumina/modules/mechanics/m04_shm/: __init__.py  physics.py  sim.py  test_m04_shm.py  ui.py
lumina/modules/mechanics/m10_double_pendulum/: __init__.py  physics.py  sim.py  test_m10_double_pendulum.py  ui.py
lumina/modules/pure_maths/: __init__.py
lumina/modules/pure_maths/p03_fractallab/: __init__.py  physics.py  sim.py  test_p03_fractallab.py  ui.py
lumina/modules/quantum/: __init__.py
lumina/modules/quantum/q01_particle_in_box/: __init__.py  physics.py  sim.py  test_q01_particle_in_box.py  ui.py
lumina/modules/quantum/q02_tunnelling/: __init__.py  physics.py  sim.py  test_q02_tunnelling.py  ui.py
lumina/modules/thermodynamics/: __init__.py
lumina/modules/thermodynamics/t01_ideal_gas/: __init__.py  physics.py  sim.py  test_t01_ideal_gas.py  ui.py
lumina/modules/thermodynamics/t02_maxwell_boltzmann/: __init__.py  physics.py  sim.py  test_t02_maxwell_boltzmann.py  ui.py
lumina/modules/waves/: __init__.py
tests/: test_core.py
(+15 files in other folders)
