[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lumina"
version = "0.1.0-dev"
description = "Interactive simulation suite for physics and mathematics"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Shane Hartley", github = "Darian-Frey" }]
requires-python = ">=3.11"
keywords = ["physics", "mathematics", "simulation", "education", "interactive"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Education",
]
dependencies = [
    "PyQt6>=6.6.0",
    "pyqtgraph>=0.13.4",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.3.1",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[project.scripts]
lumina = "lumina.launcher.main:main"

[project.urls]
Repository = "https://github.com/Darian-Frey/Lumina"
"Bug Tracker" = "https://github.com/Darian-Frey/Lumina/issues"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.setuptools.packages.find]
where = ["."]
include = ["lumina*"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long — handled by black
    "B008",  # do not perform function calls in default arguments
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]  # allow non-lowercase test function args

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
qt_api = "pyqt6"

[tool.coverage.run]
source = ["lumina"]
omit = ["tests/*", "lumina/launcher/main.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
